# quant_comp

./: '  .gitignore  AGENTS.md  CondaPkg.toml  Manifest.toml  Project.toml
00_inbox/: bloch 图像导入.md  shallow circuit.md  test.md  双比特密度矩阵一般写法.md  旋转算符.md  测量信息论.md  随机测量的意义.md
00_inbox/supplement/: README.md  barren plateaus.md  scipy.optimize.md
01_fundamentals/concepts/: Haar.md  Haar_and_Cifford_and_pauli.md  Hilbert-Schmidt.md  clifford.md  fidelity.md  logic_gates.md  native_quant_comp_csco.md  relative_phase.md  state_product.md
01_fundamentals/randomized_measurement/: Format.md  format.md
02_methods_algorithms/variational_algorithms/: Chapter 1 Variational algorithms.md  Chapter 2 Reference states.ipynb  Chapter 2 Reference states.md  Chapter 3 Ansaetze and variational forms.ipynb  Chapter 3 Ansaetze and variational forms.md  Chapter 4 Cost function.ipynb  Chapter 4 Cost function.md  Chapter 4 Cost function.sync-conflict-20260228-171506-Y4LXE3K.md  Chapter 4 assist.nb  Chapter 5 Optimization loops.ipynb  Chapter 5 Optimization loops.md  Chapter 6   Instances and extensions.ipynb  Chapter 6   Instances and extensions.md  Chapter 7 Examples and applications.ipynb  (+1 more)
03_tools_practice/qmeas/: CondaPkg.toml  Manifest.toml  README.md  note.md  pyproject.toml  reference.md
03_tools_practice/qmeas/src/qmeas/: __init__.py
03_tools_practice/qmeas/src/qmeas/random/: __init__.py  meas_config.py  meas_pipeline.py  meas_runner.py  params_setting.py
03_tools_practice/qmeas/tests/: test_meas_config.py  test_meas_pipeline.py  test_meas_runner.py
(+296 files in other folders)
